--- a/src/select.css
+++ b/src/select.css
@@ -1,4 +1,4 @@
-.container {
+.multi-container {
   position: relative;
   width: 20em;
   min-height: 1.5em;
@@ -11,18 +11,18 @@
   outline: none;
 }
 
-.container:focus {
+.multi-container:focus {
   border-color: hsl(200, 100%, 50%);
 }
 
-.value {
+.multi-value {
   flex-grow: 1;
   display: flex;
   gap: .5em;
   flex-wrap: wrap;
 }
 
-.clear-btn {
+.multi-clear-btn {
   background: none;
   color: #777;
   border: none;
@@ -32,25 +32,25 @@
   font-size: 1.25em;
 }
 
-.clear-btn:focus,
-.clear-btn:hover {
+.multi-clear-btn:focus,
+.multi-clear-btn:hover {
   color: #333;
 }
 
-.divider {
+.multi-divider {
   background-color: #777;
   align-self: stretch;
   width: .05em;
 }
 
-.caret {
+.multi-caret {
   translate: 0 25%;
   border: .25em solid transparent;
   border-top-color: #777;
   cursor: pointer;
 }
 
-.options {
+.multi-options {
   position: absolute;
   margin: 0;
   padding: 0;
@@ -67,25 +67,25 @@
   z-index: 100;
 }
 
-.options.show {
+.multi-options.show {
   display: block;
 }
 
-.option {
+.multi-option {
   padding: .25em .5em;
   cursor: pointer;
 }
 
-.option.selected {
-  background-color: hsl(200, 100%, 70%);
+.multi-option.selected {
+  background-color: #F8839C;
 }
 
-.option.highlighted {
-  background-color: hsl(200, 100%, 50%);
-  color: white
+.multi-option.highlighted {
+  background-color: #F1416C;
+  color: white;
 }
 
-.option-badge {
+.multi-option-badge {
   display: flex;
   align-items: center;
   border: .05em solid #777;
@@ -97,18 +97,18 @@
   outline: none;
 }
 
-.option-badge:hover,
-.option-badge:focus {
+.multi-option-badge:hover,
+.multi-option-badge:focus {
   background-color: hsl(0, 100%, 90%);
   border-color: hsl(0, 100%, 50%);
 }
 
-.option-badge:hover > .remove-btn,
-.option-badge:focus > .remove-btn{
+.multi-option-badge:hover > .remove-btn,
+.multi-option-badge:focus > .remove-btn {
   color: hsl(0, 100%, 50%);
 }
 
-.option-badge > .remove-btn {
+.multi-option-badge > .remove-btn {
   font-size: 1.25em;
   color: #777;
 }
